# middleware/authMiddleware.js
@@ -1,0 +1,21 @@
+const jwt = require('jsonwebtoken');
+
+const protect = (req, res, next) => {
+    const authHeader = req.headers.authorization;
+
+    if (!authHeader || !authHeader.startsWith('Bearer ')) {
+        return res.status(401).json({ message: 'Not authorized, no token' });
+    }
+
+    const token = authHeader.split(' ')[1];
+
+    try {
+        const decoded = jwt.verify(token, process.env.JWT_SECRET);
+        req.user = decoded;
+        next();
+    } catch (error) {
+        res.status(401).json({ message: 'Not authorized, token failed' });
+    }
+};
+
+module.exports = protect;
